--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,41 +1,99 @@
 @import './base.css';
- 
+
 :root {
-    --color-white: #fff;
+	--color-white: #fff;
+    --color-purple-1: #3A173C;
 
-    --fontSize-12: 12px;
-    --fontSize-14: 14px;
-    --fontSize-12: 12px;
-    --fontSize-20: 20px;
-    --fontSize-24: 24px;
-    --fontSize-32: 32px;
+	--fontSize-12: 12px;
+	--fontSize-14: 14px;
+	--fontSize-12: 12px;
+	--fontSize-20: 20px;
+	--fontSize-24: 24px;
+	--fontSize-32: 32px;
 
-    --weight-regular: 400;
-    --weight-medium: 500;
-    --weight-semibold: 600;
-    --weight-bold: 700;
-    --weight-black: 900;
+	--weight-regular: 400;
+	--weight-medium: 500;
+	--weight-semibold: 600;
+	--weight-bold: 700;
+	--weight-black: 900;
 }
 
+/* REUSED STYLES */
+
 /* HEADER */
+.header {
+	position: absolute;
+	width: 100%;
+	padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.header__container {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+    width: min(1200px, 100%);
+}
+.header__logo {
+    width: 150px;
+}
+.header__navigation {
+	display: flex;
+	align-items: center;
+	gap: 40px;
+}
+.header__nav {
+	display: flex;
+	gap: 10px;
+}
+.header__nav-link {
+    text-transform: uppercase;
+    font-size: var(--fontSize-14);
+    color: var(--color-purple-1);
+}
+.header__special-buttons {
+	display: flex;
+    align-items: center;
+	gap: 10px;
+}
+.header__special-buttons .header__special-button:first-of-type {
+    height: 20px;
+}
+.header__special-buttons .header__special-button:last-of-type {
+    height: 25px;
+}
+.header__special-icon {
+    width: 100%;
+    height: 100%;
+}
 
 /* MAIN */
+.main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* MAIN -> HERO */
+.hero {
+    width: 100%;
+    background-image: url(../images/hero.png);
+    background-size: cover;
+    height: 900px;
+}
 
 /* FOOTER */
 
 /* MEDIA */
 @media (max-width: 1200px) {
-
 }
 @media (max-width: 960px) {
-
 }
 @media (max-width: 720px) {
-
 }
 @media (max-width: 540px) {
-    
 }
 @media (max-width: 420px) {
-    
 }
